Release 2.0.1 - ???

   * Add DateNormalizingMetadataFilter let users ensure that all dates
     emitted to Solr/OpenSearch are in UTC. Users can configure which
     timezone they'd like to use in cases where the file format does
     not store a timezone (TIKA-3496).

   * Breaking change in the Solr and OpenSearch emitters. To achieve
     the SKIP or CONCATENATE attachment strategy, modify the
     parseMode in the pipesiterators or in the FetchEmitTuple (TIKA-3494).

   * Fix serialization of embedded docs in OpenSearch emitter (TIKA-3490).

Release 2.0.0 - 07/07/2021

   * Cleanup of fetcher integration with tika-server.

   * Update dependencies.

Release 2.0.0-BETA - 05/19/2021
   
   * Refactor pipes module for resilience

   * Add transcribe capability (TIKA-94).

Release 2.0.0-ALPHA - 01/13/2021

   BREAKING CHANGES in 2.0.0
   * General
     * OCR is now triggered automatically for PDFs if tesseract
       is on the user's path see (https://cwiki.apache.org/confluence/display/TIKA/TikaOCR#TikaOCR-disable-ocr)
       for how to disable OCR.
     * We upgraded from log4j to log4j2 in tika-app, tika-server and anywhere else
       we used to use log4j.
     * By default, when rendering a page for OCR, the PDFParser does not render glyphs/text.
     * Removed deprecated Metadata keys/properties (TIKA-1974).
     * Removed deprecated PDFPreflightParser (TIKA-3437).
     * Removed dangerous calls to read an inputstream or convert to bytes
       without specifying a charset
     * Parsers can be configured via tika-config.xml on instantiation.
       We have moved away from configuration via .properties files because
       of confusion among users.  This affects the PDFParser, TesseractOCRParser
       and the StringsParser.
     * Changed namespaces of translator implementations (o.a.t.language.translate.impl) to avoid
       split-package with tika-core

   * tika-parsers
     * The parser modules have been broken into three main modules: