@@ -80,6 +80,7 @@
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
       <version>${log4j2.version}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
   <build>
